--- a/css/home-mobile.less
+++ b/css/home-mobile.less
@@ -7,6 +7,21 @@ body {
 .font26{
     font-size:.26rem
 }
+/* 悬浮改变颜色 */
+.active{
+    height: 20px;
+    width: 20px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+.active img{
+    height: 20px;
+    width: 20px;
+}
+.el-menu-item:hover img,.el-menu-item:active img, .is-active img{
+    filter: drop-shadow(#2A7A95 0px 0);
+    transform: translateX(0);
+}
 #page {
     height: 100%;
     .is-vertical {
@@ -196,7 +211,8 @@ body {
                         display: flex;
                         height: 3.37rem;
                         border-radius: .2rem;
-                        background: url(../img/home/bg-yuce.png) 100% 100% #fff;
+                        background: url(../img/home/bg-yuce.png) no-repeat#fff;
+                        background-size:  100% 100% ;
                         border-radius: .1rem;
                         //                          margin-left: .2rem;
                         width: 100%;
@@ -470,6 +486,20 @@ body {
                 }
             }
         }
+    }
+     .practice-all-container .practice-all-block {
+        display: flex;
+        flex-direction: column;
+        border-radius: 0.08rem;
+        width: 99%;
+        margin-right: 0;
+        
+    }
+    .practice-all-container {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
     }
     .hide-tip {
         display: none !important;
