1.点击查看评分，弹框查看评分 2.点击反馈意见，弹框反馈意见

--- a/css/practice.less
+++ b/css/practice.less
@@ -141,6 +141,9 @@ body{
                             background: #F8F8F8;
                             margin-bottom: .18rem;
                             cursor: pointer;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
                             i{
                                 font-size: .36rem;
                             }
@@ -327,7 +330,7 @@ body{
         }
     }
     .blue{
-        color: #2BA1C9;
+        color: #2BA1C9 ;
     }
     .br-blue{
         border:.02rem solid #2BA1C9;
