--- a/static/css/app.css
+++ b/static/css/app.css
@@ -3394,3 +3394,326 @@ pre {
 	border: .02rem solid #2BA1C9;
 	color:#2BA1C9;
 }
+
+/*modal*/
+.btn {
+  background: #fff;
+  border: #DFDFDF solid 1px;
+  border-radius: 3px;
+  color: #707070;
+  display: inline-block;
+  font-size: 14px;
+  padding: 8px 15px;
+  text-decoration: none;
+  text-align: center;
+  min-width: 60px;
+  position: relative;
+  transition: color 0.1s ease;
+  margin-right: .4rem;
+}
+.btn:hover {
+  background: #DFDFDF;
+}
+.btn-blue{
+	background: #2BA1C9;
+  border-radius: 3px;
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  padding: 8px 15px;
+  text-decoration: none;
+  text-align: center;
+  min-width: 60px;
+  position: relative;
+  transition: color 0.1s ease;
+  margin-right: .4rem;
+  opacity: .8;
+}
+.btn-blue:hover {
+  background: #2BA1C9;
+  opacity: 1;
+}
+.btn.btn-big {
+  font-size: .28rem;
+  padding: .15rem .2rem;
+  min-width: 1rem;
+}
+.btn-close {
+  color: #aaa;
+    font-size: .6rem;
+    text-decoration: none;
+    position: absolute;
+    right: 0.1rem;
+    top: 0;
+    text-align: center;
+    line-height: .88rem;
+}
+.btn-close:hover {
+  color: #919191;
+}
+.modal:before {
+  content: "";
+  display: none;
+  background: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+}
+.modal:target:before {
+  display: block;
+}
+.modal:target .modal-dialog {
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+  top: 20%;
+}
+.modal-dialog {
+  background: #fefefe;
+  border: #333 solid .02rem;
+  border-radius: .05rem;
+  margin-left: -200px;
+  position: fixed;
+  left: 50%;
+  top: -100%;
+  z-index: 11;
+  width: 12rem;
+  min-height: 12rem;
+  -webkit-transform: translate(0, -500%);
+  -ms-transform: translate(0, -500%);
+  transform: translate(0, -500%);
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+  -moz-transition: -moz-transform 0.3s ease-out;
+  -o-transition: -o-transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
+}
+.modal-body {
+  padding: .4rem;
+}
+.modal-header,
+.modal-footer {
+  padding: .1rem .2rem;
+}
+.modal-header {
+  border-bottom: #eee solid 1px;
+}
+.modal-header h2 {
+  font-size: .44rem;
+  text-align: center;
+  line-height:.8rem;
+}
+.modal-footer {
+    /*border-top: #eee solid 0.02rem;*/
+    text-align: center;
+    position: absolute;
+    bottom: 0.1rem;
+    right: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 0.3rem;
+    
+}
+/*progress*/
+.g-progress {
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+    mask: radial-gradient(transparent, transparent 50%, #000 51%, #000 0);
+    -webkit-mask: radial-gradient(transparent 44px, #000 45px);
+     background: conic-gradient(#DFDFDF 0, #DFDFDF 25%, #005DE9 25%, #005DE9 75%, #005DE9 100%);
+}
+.g-progress-orange {
+     background: conic-gradient(#DFDFDF 0, #DFDFDF 25%, #FFA200 25%,#FFA200 75%, #FFA200 100%);
+}
+.g-progress-bl {
+     background: conic-gradient(#DFDFDF 0, #DFDFDF 25%, #2BA1C9 25%,#2BA1C9 75%, #2BA1C9 100%);
+}
+.progress-containter{
+	position: relative;
+}
+.num-blue{
+	position: absolute;
+	top: 35%;
+    left: 40%;
+    color: #005DE9;
+    font-size: .44rem;
+    font-weight: bold;
+}
+.num-orange{
+	position: absolute;
+	top: 35%;
+    left: 40%;
+    color: #FFA200;
+    font-size: .44rem;
+    font-weight: bold;
+}
+.num-bl{
+	position: absolute;
+	top: 35%;
+    left: 40%;
+    color: #2BA1C9;
+    font-size: .44rem;
+    font-weight: bold;
+}
+.modal-progress{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+.progress{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	
+}
+.progress label{
+	font-size: .28rem;
+	color: #AFAFAF;
+	margin-top: .34rem;
+}
+.modal-score{
+	display: flex;
+	flex-direction: column;
+	margin-top: .5rem;
+}
+.modal-score-title{
+	display: flex;
+	flex-direction: row;
+	margin: .28rem 0;
+}
+.modal-score .modal-score-title h3{
+	font-size: .28rem;
+	color: #AFAFAF;
+	line-height: .38rem;
+	padding-right: .38rem;
+}
+ .modal-score-title a{
+ 	border-radius: .18rem;
+ 	color: #fff;
+ 	font-size: .26rem;
+ 	padding: 0 .34rem;
+ 	margin-right: .28rem;
+ 	
+ }
+ .modal-score-result{
+ 	border:.02rem solid #DFDFDF;
+ 	/*border-radius: .18rem;*/
+ 	max-height: 5rem;
+ 	overflow-y: auto;
+ }
+ .modal-score-result p{
+ 	font-weight: bold;
+ 	font-size: .30rem;
+ 	line-height: .6rem;
+ 	padding: .2rem;
+ }
+ a.blue-bg{
+ 	background: #2BA1C9;
+ }
+ a.yellow-bg{
+ 	background: #f4cc01;
+ }
+ a.grey-bg{
+ 	background: #707070;
+ }
+ a.red-bg{
+ 	background: red;
+ }
+.blue{
+ 	color: #2BA1C9;
+ }
+ .yellow{
+ 	color: #f4cc01;
+ }
+ .grey{
+ 	color: #707070;
+ }
+.red{
+ 	color: red;
+ }
+/*modal   feedback*/
+.modal-form{
+	display: flex;
+	flex-direction: column;
+}
+.modal-block{
+	width: 85%;
+}
+.modal-item{
+	display: flex;
+	flex-direction: row;
+	margin: .28rem 0;
+}
+.modal-label{
+	font-size: .28rem;
+	color: #AFAFAF;
+}
+.modal-radio{
+    position: relative;
+    display: inline-block;
+    margin-right: .3rem;
+}
+ input.radio-input{
+     vertical-align: middle;
+    margin-top: -2px;
+    margin-bottom: 1px;
+    /* 前面三行代码是为了让radio单选按钮与文字对齐 */
+    width: .4rem;
+    height: .4rem;
+    appearance: none;/*清楚默认样式*/
+    -webkit-appearance: none;
+    opacity: 0;
+    outline: none;
+}       
+label.radio-label {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: .4rem;
+    height: .4rem;
+    border: .02rem solid #2A7A95;
+    border-radius: 100%;
+}
+input.radio-input:checked+label {
+    background: #2A7A95;
+}
+input.radio-input:checked+label::after {
+    content: "";
+    position: absolute;
+    left: 0.13rem;
+    top: 0.06rem;
+    width: 0.08rem;
+    height: 0.17rem;
+    border-right: .02rem solid #fff;
+    border-bottom: .02rem solid #fff;
+    transform: rotate(45deg);
+}        
+.modal-radio span{
+    color:#707070;
+    font-size: .28rem;
+}
+.textarea-con{
+	border:.02rem solid #DFDFDF;
+	width: 100%;
+	line-height: .6rem;
+	padding: .28rem;
+	color: #707070;
+	font-size: .28rem;
+}
+textarea::placeholder {
+  color: #DFDFDF;
+  font-size: .28rem;
+}
+.font-white{
+	color:#fff;
+}
+.border-none{
+	border: none;
+}
